[package]
name = "calculate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "calculate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
ordered-float = "3.7.0"
rayon = "1.7"

[profile.release]
opt-level = 3
